seve change complite

--- a/index.html
+++ b/index.html
@@ -4,24 +4,22 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ramen Rating App</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1>Ramen Rating App</h1>
 
-  <!-- Ramen Menu Display -->
   <div id="ramen-menu"></div>
 
-  <!-- Ramen Detail Display -->
   <div id="ramen-detail">
     <h2>Ramen Details</h2>
+    <img src="" alt="Ramen Image" id="ramen-detail-img">
     <p id="ramen-name"></p>
     <p id="ramen-restaurant"></p>
     <p id="ramen-rating"></p>
     <p id="ramen-comment"></p>
   </div>
 
-  <!-- Add New Ramen Form -->
   <form id="add-ramen-form">
     <input type="text" id="new-ramen-name" placeholder="Ramen Name" required>
     <input type="text" id="new-ramen-restaurant" placeholder="Restaurant Name" required>
